chore: update English localization strings for clarity and consistency
- Revised text for better clarity in user instructions and error messages.
- Standardized formatting for time units and improved phrasing in various error messages.
- Enhanced user guidance for playlist creation and error handling.

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -2,12 +2,12 @@
   "appName": "Music Timer for Spotify",
   "header.title": "Music Timer",
   "top.description1": "Create a playlist with a specified playback time.",
-  "top.description2": "* If auto-play is enabled, songs will continue to play after the playlist ends.",
+  "top.description2": "Note: If auto-play is enabled, songs will continue to play after the playlist ends.",
   "auth.login": "Log in with Spotify",
   "form.specifyTime.required": "Please enter playback time.",
   "form.specifyTime.typeError": "Please enter numbers only.",
   "form.specifyTime.range": "Please specify playback time between 3 and 100 minutes.",
-  "form.specifyTime.minute": "Min",
+  "form.specifyTime.minute": "min",
   "form.specifyTime.placeholder": "3 ～ 100",
   "form.createPlaylist": "Create Playlist",
   "dialog.loading.title": "Preparing Playlist",
@@ -18,26 +18,26 @@
   "dialog.createPlaylist.not.created.title": "Playlist Creation Failed",
   "dialog.createPlaylist.not.created": "Please review the conditions and try again.",
   "dialog.tapToClose": "(Tap to close)",
-  "dialog.createPlaylist.server.error": "Please try again after some time.",
+  "dialog.createPlaylist.server.error": "Please try again later.",
   "toast.playlistDeleting": "Deleting...",
-  "toast.playlistDeleted": "Created playlist has been deleted.",
-  "toast.playlistDeleteError": "An issue occurred while deleting the playlist.\nPlease try again after some time.",
+  "toast.playlistDeleted": "Playlist deleted successfully.",
+  "toast.playlistDeleteError": "An issue occurred while deleting the playlist.\nPlease try again later.",
   "error.500.home.back": "Return to Home",
   "error.500.message": "An issue has occurred",
-  "error.500.description": "Currently unable to access.\nPlease try again after some time.",
+  "error.500.description": "The service is temporarily unavailable.\nPlease try again later.",
   "createPlaylist.followedArtistsEmpty": "You can select songs from artists you follow.\nFollow artists on Spotify to see them here.",
   "createPlaylist.findArtists": "Find on Spotify",
   "createPlaylist.findArtistsTitle": "Find Artists",
   "createPlaylist.favoriteTracks": "Favorite Tracks",
-  "error.not_enough_tracks": "Insufficient tracks. Shorten the playback time or add more artists.",
+  "error.not_enough_tracks": "Not enough tracks. Please shorten the playback time or add more artists.",
   "error.no_favorite_tracks": "No favorite tracks found. Like songs on Spotify or select artists.",
   "error.tracks_not_found": "Tracks not found. Change your conditions and try again.",
   "error.spotify_rate_limit": "Spotify API usage limit reached. Please wait a few minutes.",
   "error.playlist_quota_exceeded": "Playlist creation limit reached. Delete unnecessary playlists on Spotify.",
-  "error.token_expired": "Authentication expired. Refresh the page and login again.",
+  "error.token_expired": "Authentication expired. Refresh the page and log in again.",
   "error.playlist_creation_failed": "An unexpected error occurred. Review your conditions and try again.",
-  "error.internal_error": "Server error occurred. Please try again after some time.",
-  "error.timeout_insufficient_tracks": "Insufficient total duration for the selected conditions.\nShorten the playback time or add more favorite tracks or artists.",
+  "error.internal_error": "Server error occurred. Please try again later.",
+  "error.timeout_insufficient_tracks": "The selected conditions don't provide enough total duration.\nPlease shorten the playback time or add more favorite tracks or artists.",
   "error.timeout_no_match": "No combination found matching the specified playback time.\nChange the playback time or adjust your conditions.",
-  "error.default": "An error occurred. Please try again after some time."
+  "error.default": "An error occurred. Please try again later."
 }
