--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -39,5 +39,8 @@
   "error.internal_error": "サーバーエラーが発生しました。しばらく時間を置いてから再度お試しください。",
   "error.timeout_insufficient_tracks": "選択した条件では総再生時間が不足しています。\n再生時間を短くするか、お気に入りのトラックやアーティストを追加してください。",
   "error.timeout_no_match": "指定した再生時間に合う組み合わせが見つかりませんでした。\n再生時間を変更するか、条件を見直してください。",
-  "error.default": "エラーが発生しました。しばらく時間を置いてから再度お試しください。"
+  "error.default": "エラーが発生しました。しばらく時間を置いてから再度お試しください。",
+  "common.networkError": "通信エラー",
+  "common.networkErrorDescription": "データを取得できませんでした。\n通信環境を確認して再度お試しください。",
+  "common.retry": "再試行"
 }
