feat: integrate SoundCloud login functionality and update UI components
- Added SoundCloud icon image to the project.
- Updated login button components to include SoundCloud login option with an icon.
- Modified localization files to support SoundCloud login and playlist creation messages.
- Adjusted styles and UI elements for better integration of SoundCloud features.

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -4,6 +4,7 @@
   "top.description1": "Create a playlist with a specified playback time.",
   "top.description2": "Note: If auto-play is enabled, songs will continue to play after the playlist ends.",
   "auth.login": "Log in with Spotify",
+  "auth.login.soundcloud": "Log in with SoundCloud",
   "form.specifyTime.required": "Please enter playback time.",
   "form.specifyTime.typeError": "Please enter numbers only.",
   "form.specifyTime.range": "Please specify playback time between 3 and 100 minutes.",
@@ -14,6 +15,7 @@
   "dialog.loading.subtitle": "Searching for music...",
   "dialog.createPlaylist.title": "New Playlist",
   "dialog.createPlaylist.open": "Open in Spotify",
+  "dialog.createPlaylist.open.soundcloud": "Open in SoundCloud",
   "dialog.createPlaylist.close": "Close",
   "dialog.createPlaylist.not.created.title": "Playlist Creation Failed",
   "dialog.createPlaylist.not.created": "Please review the conditions and try again.",
