--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -4,6 +4,7 @@
   "top.description1": "指定した再生時間のプレイリストを作成します。",
   "top.description2": "※ 自動再生が有効の場合、プレイリストの再生終了後も続けて曲が再生されます。",
   "auth.login": "Spotifyでログイン",
+  "auth.login.soundcloud": "SoundCloudでログイン",
   "form.specifyTime.required": "再生時間を入力してください。",
   "form.specifyTime.typeError": "数値のみを入力してください。",
   "form.specifyTime.range": "再生時間は3分から100分の間で指定してください。",
@@ -14,6 +15,7 @@
   "dialog.loading.subtitle": "曲を検索しています...",
   "dialog.createPlaylist.title": "新しいプレイリスト",
   "dialog.createPlaylist.open": "Spotifyで開く",
+  "dialog.createPlaylist.open.soundcloud": "SoundCloudで開く",
   "dialog.createPlaylist.close": "閉じる",
   "dialog.createPlaylist.not.created.title": "プレイリストを作成できませんでした",
   "dialog.createPlaylist.not.created": "条件を見直し再度お試しください。",
