feat: enhance authentication and service handling for Spotify and SoundCloud
- Added a function to extract service type from JWT for improved authentication handling.
- Updated AuthCallbackPage to determine service type from both URL parameters and JWT.
- Introduced a centralized service configuration file to manage service-specific settings and colors.
- Modified localization files to include SoundCloud-specific messages for user feedback.
- Updated AsyncStorage keys in Spotify components to prevent conflicts with SoundCloud data.

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -28,12 +28,15 @@
   "error.500.message": "An issue has occurred",
   "error.500.description": "The service is temporarily unavailable.\nPlease try again later.",
   "createPlaylist.followedArtistsEmpty": "You can select songs from artists you follow.\nFollow artists on Spotify to see them here.",
+  "createPlaylist.followedArtistsEmpty.soundcloud": "You can select songs from artists you follow.\nFollow artists on SoundCloud to see them here.",
   "createPlaylist.findArtists": "Find on Spotify",
+  "createPlaylist.findArtists.soundcloud": "Find on SoundCloud",
   "createPlaylist.findArtistsTitle": "Find Artists",
   "createPlaylist.favoriteTracks": "Favorite Tracks",
   "createPlaylist.favoriteTracks.disabled": "No favorite tracks.\nAdd on Spotify",
+  "createPlaylist.favoriteTracks.disabled.soundcloud": "No favorite tracks.\nAdd on SoundCloud",
   "error.not_enough_tracks": "Not enough tracks. Please shorten the playback time or add more artists.",
-  "error.no_favorite_tracks": "No favorite tracks found. Like songs on Spotify or select artists.",
+  "error.no_favorite_tracks": "No favorite tracks found. Like songs or select artists.",
   "error.tracks_not_found": "Tracks not found. Change your conditions and try again.",
   "error.artist_tracks_not_found": "No tracks found for the selected artists. Please select other artists.",
   "error.spotify_rate_limit": "Spotify API usage limit reached. Please wait a few minutes.",
