--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -28,12 +28,15 @@
   "error.500.message": "問題が発生しました",
   "error.500.description": "一時的にアクセスできない状態です。\n時間を置いて再度お試しください。",
   "createPlaylist.followedArtistsEmpty": "フォローしているアーティストから選曲することができます。\nSpotifyでアーティストをフォローすると、ここに表示されます。",
+  "createPlaylist.followedArtistsEmpty.soundcloud": "フォローしているアーティストから選曲することができます。\nSoundCloudでアーティストをフォローすると、ここに表示されます。",
   "createPlaylist.findArtists": "Spotifyで探す",
+  "createPlaylist.findArtists.soundcloud": "SoundCloudで探す",
   "createPlaylist.findArtistsTitle": "アーティストを見つける",
   "createPlaylist.favoriteTracks": "お気に入りの曲",
   "createPlaylist.favoriteTracks.disabled": "お気に入り曲がありません。\nSpotifyで追加してください。",
+  "createPlaylist.favoriteTracks.disabled.soundcloud": "お気に入り曲がありません。\nSoundCloudで追加してください。",
   "error.not_enough_tracks": "トラック数が不足しています。再生時間を短くするか、アーティストを追加してください。",
-  "error.no_favorite_tracks": "お気に入りのトラックがありません。Spotifyで曲にいいねをするか、アーティストを選択してください。",
+  "error.no_favorite_tracks": "お気に入りのトラックがありません。曲にいいねをするか、アーティストを選択してください。",
   "error.tracks_not_found": "トラックが見つかりませんでした。条件を変更して再度お試しください。",
   "error.artist_tracks_not_found": "選択したアーティストの曲が見つかりませんでした。他のアーティストを選択してください。",
   "error.spotify_rate_limit": "Spotify APIの利用上限に達しました。数分お待ちください。",
